Finalized header and added stess tracks

--- a/system/lang/de.json
+++ b/system/lang/de.json
@@ -2,7 +2,8 @@
     "FATEx": {
         "Sheet": {
             "Name": "Name",
-            "Description": "Beschreibung"
+            "Description": "Beschreibung",
+            "FatePoints": "Fate Punkte"
         }
     }
 }
