Item management, stress tracks, custom labels and more

--- a/system/lang/de.json
+++ b/system/lang/de.json
@@ -13,6 +13,11 @@
                 "Extras": "Extras",
                 "Bio": "Bio"
             }
+        },
+        "Item": {
+            "Stress": {
+                "Name": "Bezeichner"
+            }
         }
     }
 }
