--- a/system/lang/en.json
+++ b/system/lang/en.json
@@ -12,7 +12,26 @@
                 "Stunts": "Stunts",
                 "Extras": "Extras",
                 "Bio": "Bio"
+            },
+            "Stress": {
+                "Add": "Add stress track"
             }
+        },
+        "Item": {
+            "Stress": {
+                "Name": "Label",
+                "Size": "Number of boxes",
+                "Boxes": {
+                    "Label": "Box labels",
+                    "Custom": "Custom Labels",
+                    "CustomHelp": "Enter space-seperated list of unicode characters. E.g. \"2 4 6 ☀\"."
+                }
+            }
+        },
+        "Dialog": {
+            "EntityDelete": "Do you really want to <strong>permanently</strong> delete this entity?",
+            "Confirm": "Confirm",
+            "Cancel": "Cancel"
         }
     }
 }
