Implemented aspects restructured item_actions and added base item listener to baseitem

--- a/system/lang/en.json
+++ b/system/lang/en.json
@@ -33,6 +33,13 @@
                     "Condensed": "Condensed",
                     "Custom": "Blank / Custom"
                 }
+            },
+            "Aspect": {
+                "Name": "Name",
+                "Value": "Text",
+                "Description": "Description",
+                "DescriptionHelp": "Is only displayed when sending to chat",
+                "Label": "Label"
             }
         },
         "Dialog": {
