Changed all localization strings

--- a/system/lang/en.json
+++ b/system/lang/en.json
@@ -1,5 +1,7 @@
 {
-    "FATEx": {
+    "FATEx": "FATEx",
+    "FAx": {
+        "name": "FATEx",
         "Sheet": {
             "Name": "Name",
             "Description": "Description",
