Finished proof-of-concept import of skills, aspects, stress and consequences

--- a/system/lang/en.json
+++ b/system/lang/en.json
@@ -39,6 +39,9 @@
             },
             "Stress": {
                 "Add": "Add stress track"
+            },
+            "Messages": {
+                "EmptyActor": "It looks like your character doesn't have any content yet. You can change this in the \"Edit mode\". The button to toggle the edit mode can be found in the header bar."
             }
         },
         "Item": {
