Renamed system to FateX

--- a/system/lang/en.json
+++ b/system/lang/en.json
@@ -1,7 +1,7 @@
 {
-    "FATEx": "FATEx",
+    "FateX": "FateX",
     "FAx": {
-        "name": "FATEx",
+        "name": "FateX",
         "Global": {
             "Ladder": {
                 "+8": "Legendary",
