--- a/system/lang/en.json
+++ b/system/lang/en.json
@@ -118,8 +118,15 @@
             },
             "Automation": {
                 "Headline": "Automation",
-                "Description": "There are no skill references set yet. Please add one or more skill references to enable automation features.",
-                "AddSkillRef": "Add skill reference",
+                "Description": "There are no skill conditions set yet. Please add one or more skill conditions to enable automation features.",
+                "AddSkillRef": "Add skill condition",
+                "DisableUntil": "Disable until",
+                "MultipleConditions": "Enable automation if",
+                "MultipleConditionsMatches": "condition matches",
+                "Combinations": {
+                    "AND": "every",
+                    "OR": "any"
+                },
                 "Operators": {
                     "OPERATOR_EQUALS": "equals",
                     "OPERATOR_NOT_EQUALS": "doesn't equal",
