--- a/system/lang/en.json
+++ b/system/lang/en.json
@@ -123,7 +123,7 @@
                 "DisableUntil": "Disable until",
                 "MultipleConditions": "Enable automation if",
                 "MultipleConditionsMatches": "condition matches",
-                "Combinations": {
+                "Conjunctions": {
                     "AND": "every",
                     "OR": "any"
                 },
