Added help texts for the actor template apps

--- a/system/lang/en.json
+++ b/system/lang/en.json
@@ -155,7 +155,8 @@
                 "App": {
                     "Title": "Configure Templates",
                     "Label": "Settings",
-                    "CreateNew": "Create new template"
+                    "CreateNew": "Create new template",
+                    "Help": "There are no configured templates yet.<br />To add a new template, click on the <strong>Create new template</strong> button, which is also available in the header bar."
                 }
             }
         },
@@ -166,7 +167,9 @@
                 "Configuration": "Configuration",
                 "Empty": "Empty actor",
                 "CreateEmpty": "Empty actor",
-                "Or": "or"
+                "Or": "or",
+                "Help": "To add new templates, click on the <strong>Configuration</strong> button, which is also available in the header bar.",
+                "Explain": "Templates are a great way to have different sheets for different kinds of actors. We suggest using <strong>different templates</strong> for PCs, NPCs, and Mooks, as all of them have <strong>different sheet requirements</strong>."
             }
         }
     }
